file-upload-working

--- a/src/app/site/site-dashboard/site-dashboard.component.html
+++ b/src/app/site/site-dashboard/site-dashboard.component.html
@@ -29,11 +29,11 @@
                 <div class="col">
                     <a
                     [routerLink]="['/site/patient/new']"
-                    class="btn btn-primary "
+                     class="btn btn-success"
                     mat-raised-button
                     type="button"
                   >
-                    <i class="material-icons">add_box</i>Add</a>
+                    <i class="material-icons">add_box</i> Add</a>
                 </div>
               </div>
 
