--- a/src/app/site/visit1/visit1.component.html
+++ b/src/app/site/visit1/visit1.component.html
@@ -47,6 +47,10 @@
                         <h4 mat-line>{{form.name}}</h4>
                       </a>
                 </span>
+                <a mat-list-item routerLink="/site/visits/fileupload/{{patID}}/{{visit._id}}" >
+                  <mat-icon mat-list-icon >file_copy</mat-icon>
+                  <h4 mat-line>File Upload</h4>
+                </a>
 
            </mat-action-list>
          </mat-expansion-panel>
