--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="wrapper wrapper-full-page">
-  <div class="page-header login-page header-filter" filter-color="black" style="background-image: url('./assets/img/login.jpg'); background-size: cover; background-position: top center;">
+  <div class="page-header login-page header-filter" filter-color="black" style="background-image: url('./assets/img/Picture3.png'); background-size: cover; background-position: top center;">
     <!--   you can change the color of the filter page using: data-color="blue | purple | green | orange | red | rose " -->
 
     <div class="container">
       <div class="row">
-        
+
         <div class="col-lg-5 col-md-6 col-sm-6 ml-auto mr-auto">
           <form [formGroup]="frmLogin" class="form" >
             <div class="card card-login ">
@@ -34,11 +34,11 @@
                         <i class="material-icons">lock_outline</i>
                       </span>
                     </div>
-                    <input type="password" formControlName="password" class="form-control" placeholder="Password..." [ngClass]="{'is-invalid': submitted && f.password.errors}" 
+                    <input type="password" formControlName="password" class="form-control" placeholder="Password..." [ngClass]="{'is-invalid': submitted && f.password.errors}"
                       required>
                       <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                         <div *ngIf="f.password.errors.required">Password is required</div>
-                        
+
                     </div>
                   </div>
                 </span>
@@ -52,7 +52,7 @@
         </form>
       </div>
     </div>
-    
+
   </div>
   <app-footer></app-footer>
 </div>
