--- a/src/app/site/fileupload/fileupload.component.html
+++ b/src/app/site/fileupload/fileupload.component.html
@@ -27,31 +27,88 @@
     <br />
     <div class="row">
       <div class="col-md-8 offset-md-2">
-        <mat-card>
-          <mat-card-header>
-            <h4 mat-card-title>File Upload</h4>
-          </mat-card-header>
-          <mat-card-content>
-              <form [formGroup]="form" (submit)="onSubmit()">
+        <div class="row">
+          <div class="col-md-6">
+            <mat-card>
+              <mat-card-header>
+                <mat-card-title>File Upload</mat-card-title>
+                <mat-card-subtitle
+                  >Patient ID:
+                  {{ getRefNumber(patient?.pat_id, patient?.prefix) }}
+                </mat-card-subtitle>
+              </mat-card-header>
+              <mat-card-content>
+                <form
+                  [formGroup]="form"
+                  (submit)="onSubmit()"
+                  *ngIf="!fileName"
+                >
                   <input
                     type="file"
                     name="file"
                     placeholder="Select File"
                     (change)="onFileChange($event)"
                   />
-                  <button mat-raised-button color="primary" type="submit">
+                  <button mat-raised-button [disabled]="fileTypeMark != 'check' || fileSizeMark != 'check'" color="primary" type="submit">
                     Upload
                   </button>
                 </form>
                 <mat-progress-bar
+                  *ngIf="!fileName"
                   mode="determinate"
                   [value]="uploadResponse.message"
                 ></mat-progress-bar>
-          </mat-card-content>
-        </mat-card>
-        <div>
+                <div *ngIf="fileName">
+                  Uploaded File : {{ fileName | uppercase }}
+                </div>
+              </mat-card-content>
+              <mat-card-actions>
+                <a
+                  mat-button
+                  color="primary"
+                  routerLink="/site/visits/{{ patID }}"
+                  >Back</a
+                >
+              </mat-card-actions>
+            </mat-card>
+          </div>
+          <div class="col-md-6" >
+            <mat-card>
+              <mat-card-header>
+                <mat-card-title>Instructions</mat-card-title>
+              </mat-card-header>
+              <mat-card-content>
+                <mat-list>
+                  <mat-list-item>
+                    <mat-icon
+                      mat-list-icon
+                      [ngClass]="{
+                        'text-success': fileTypeMark === 'check',
+                        'text-danger': fileTypeMark != 'check'
+                      }"
+                      >{{ fileTypeMark }}</mat-icon
+                    >
+                    <h4 mat-line>Allowed file type : JPG | PNG | TIFF</h4>
+                  </mat-list-item>
+                  <mat-list-item>
+                    <mat-icon
+                      mat-list-icon
+                      [ngClass]="{
+                        'text-success': fileSizeMark === 'check',
+                        'text-danger': fileSizeMark != 'check'
+                      }"
+                      >{{ fileSizeMark }}</mat-icon
+                    >
+                    <h4 mat-line>File size should be less than 5 MB</h4>
+                  </mat-list-item>
+                </mat-list>
+              </mat-card-content>
 
+            </mat-card>
+          </div>
         </div>
+
+        <div></div>
       </div>
     </div>
   </div>
