--- a/src/app/site/fileupload/fileupload.component.html
+++ b/src/app/site/fileupload/fileupload.component.html
@@ -1,6 +1,6 @@
 <div class="main-content">
   <div class="container-fluid">
-    <app-alert></app-alert>
+
     <br />
     <div class="row">
       <div>
@@ -49,7 +49,7 @@
                     placeholder="Select File"
                     (change)="onFileChange($event)"
                   />
-                  <button mat-raised-button [disabled]="fileTypeMark != 'check' || fileSizeMark != 'check'" color="primary" type="submit">
+                  <button mat-raised-button [disabled]="fileTypeMark !== 'check' || fileSizeMark !== 'check'" color="primary" type="submit">
                     Upload
                   </button>
                 </form>
