--- a/src/app/monitor/select-study/select-study.component.html
+++ b/src/app/monitor/select-study/select-study.component.html
@@ -5,7 +5,7 @@
             <div class="card card-product">
               <div class="card-header card-header-image" data-header-animation="true">
                 <a href="#pablo">
-                  <img class="img" src="./assets/img/card-2.jpg">
+                  <img class="img" src="./assets/img/StudyImage.png">
                 </a>
               </div>
               <div class="card-body">
