--- a/src/app/site/fileupload/fileupload.component.html
+++ b/src/app/site/fileupload/fileupload.component.html
@@ -60,6 +60,7 @@
                 ></mat-progress-bar>
                 <div *ngIf="fileName">
                   Uploaded File : {{ fileName | uppercase }}
+                  <button mat-raised-button color="warn" (click)="changeMode()">Change File</button>
                 </div>
               </mat-card-content>
               <mat-card-actions>
@@ -72,7 +73,7 @@
               </mat-card-actions>
             </mat-card>
           </div>
-          <div class="col-md-6" >
+          <div class="col-md-6" *ngIf="!fileName" >
             <mat-card>
               <mat-card-header>
                 <mat-card-title>Instructions</mat-card-title>
