--- a/src/app/site/patient-create/patient-create.component.html
+++ b/src/app/site/patient-create/patient-create.component.html
@@ -40,12 +40,14 @@
                     <app-field-error-display [displayError]="isFieldValid(frmRegister, 'dob')" errorMsg="Date of Birth is required"></app-field-error-display>
                   </mat-form-field>
                 </div>
-                <div class="col-md-5 mr-auto text-danger" *ngIf="showDobReason">Age of the patient ({{age}} years) is not in the approved limit ({{minAge}} - {{MaxAge}} years).</div>
                 <div class="col-md-5 mr-auto" *ngIf="showDobReason">
-                <mat-form-field class="example-full-width" >
-                  <input matInput formControlName="reason" placeholder="Enter reason for exception in age of patient" />
-                </mat-form-field>
-              </div>
+                  <mat-form-field class="example-full-width" >
+                    <input matInput formControlName="reason" placeholder="Enter reason for exception in age of patient" />
+                  </mat-form-field>
+                </div>
+                <div class="col-md-5 mr-auto text-danger" *ngIf="showDobReason">
+                  Age of the patient ({{age}} years) is not in the approved limit ({{minAge}} - {{MaxAge}} years).
+                </div>
               </div>
               <div class="row">
                 <div class="col-md-5 mr-auto">
