--- a/src/app/monitor/monitor-dashboard/monitor-dashboard.component.html
+++ b/src/app/monitor/monitor-dashboard/monitor-dashboard.component.html
@@ -1,6 +1,5 @@
 <div class="main-content">
-<div class="grid-container">
-  <!-- <h1 class="mat-h1">Dashboard</h1> -->
+<!-- <div class="grid-container">
   <mat-grid-list cols="2" rowHeight="350px">
     <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
       <mat-card class="dashboard-card">
@@ -22,5 +21,22 @@
       </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
+</div> -->
+<div class="row grid-container">
+  <div class="col">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>Sites</mat-card-title>
+      </mat-card-header>
+      <mat-card-content class="dashboard-card-content">
+        <div class="row">
+            <div class="col" *ngFor="let site of sites">
+                <button mat-raised-button  >{{site.name}}</button>
+              </div>
+        </div>
+        
+      </mat-card-content>
+    </mat-card>
+  </div>
 </div>
 </div>
