--- a/src/app/site/site-dashboard/site-dashboard.component.html
+++ b/src/app/site/site-dashboard/site-dashboard.component.html
@@ -10,13 +10,13 @@
           </div>
         </div>
       <div class="row" *ngIf="studyName">
-        <div class="col-lg-4 col-md-6 col-sm-6">
+        <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="card card-stats">
             <div class="card-header card-header-success card-header-icon">
               <div class="card-icon">
                 <i class="material-icons">assignment_ind</i>
               </div>
-              <p class="card-category">Enrolled Patients </p>
+              <p class="card-category">Patients Status </p>
               <h3 class="card-title">{{patientCount}}</h3>
             </div>
             <div class="card-body">
@@ -37,11 +37,12 @@
                 </div>
               </div>
 
-              <div class="table-responsive">
-                <table mat-table [dataSource]="dataSource" class="table ">
+              <div class="table-responsive" style="overflow: auto;" >
+                <table mat-table [dataSource]="dataSource" class="table-striped" >
                   <ng-container matColumnDef="patid">
                     <th mat-header-cell *matHeaderCellDef>Patient ID</th>
-                    <td mat-cell *matCellDef="let patient" class="text-left"> <mat-icon>person</mat-icon>
+                    <td mat-cell *matCellDef="let patient" class="text-left">
+                      <!-- <mat-icon>person</mat-icon> -->
                       <span routerLink="/site/visits/{{ patient._id }}">
                           {{ getRefNumber(patient.pat_id, patient.prefix) }}
                       </span>
@@ -54,24 +55,30 @@
                       {{ patient.initials }}
                     </td>
                   </ng-container>
-                  <tr mat-header-row *matHeaderRowDef="displayedColumn"></tr>
+                  <ng-container matColumnDef="status">
+                    <th mat-header-cell *matHeaderCellDef> Status</th>
+                    <td mat-cell *matCellDef="let row"> {{row.status}} </td>
+                  </ng-container>
+                  <tr mat-header-row *matHeaderRowDef="displayedColumn; sticky: true"></tr>
                   <tr mat-row *matRowDef="let row; columns: displayedColumn"></tr>
                 </table>
 
-                <mat-paginator
-                  [pageSizeOptions]="[5]"
-                  showFirstLastButtons
-                ></mat-paginator>
+
               </div>
             </div>
-
+            <div class="card-footer">
+                <mat-paginator
+                [pageSizeOptions]="[3]"
+                showFirstLastButtons
+              ></mat-paginator>
+            </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6">
+        <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="card card-stats">
-            <div class="card-header card-header-rose card-header-icon">
+            <div class="card-header card-header-info card-header-icon">
               <div class="card-icon">
-                <i class="material-icons">lock</i>
+                <i class="material-icons">file_copy</i>
               </div>
               <p class="card-category">eCRF Status</p>
               <!-- <h3 class="card-title">0</h3> -->
@@ -94,7 +101,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6">
+        <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="card card-stats">
             <div class="card-header card-header-warning  card-header-icon">
               <div class="card-icon">
@@ -108,8 +115,7 @@
                 <tr><td class="text-left">Open Queries</td><td>{{openQuery}}</td></tr>
                 <tr><td class="text-left">Responded Queries</td><td>{{overDue}}</td></tr>
                 <tr><td class="text-left">Closed Queries</td><td>{{overDue}}</td></tr>
-                <tr><td class="text-left">Adverse Events</td><td>{{dashboardCount.AECount}}</td></tr>
-                <tr><td class="text-left">SAE</td><td>{{dashboardCount.SAE}}</td></tr>
+
               </table>
             </div>
             <div class="card-footer">
@@ -120,22 +126,29 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="card card-stats">
-            <div class="card-header card-header-info card-header-icon">
+            <div class="card-header card-header-danger card-header-icon">
               <div class="card-icon">
-                <i class="fa fa-twitter"></i>
+                <i class="material-icons">assistant_photo</i>
               </div>
-              <p class="card-category">Followers</p>
-              <h3 class="card-title">+245</h3>
+              <p class="card-category">Safety Status</p>
+              <h3 class="card-title"></h3>
+            </div>
+            <div class="card-body">
+                <table class="table table-striped">
+                    <tr><td class="text-left">Adverse Events</td><td>{{dashboardCount.AECount}}</td></tr>
+                    <tr><td class="text-left">SAE</td><td>{{dashboardCount.SAE}}</td></tr>
+                </table>
             </div>
             <div class="card-footer">
               <div class="stats">
-                <i class="material-icons">update</i> Just Updated
+                <i class="material-icons">date_range</i>
+                Last updated at {{dashboardCount.updated_at}}
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
       </div>
 
     </div>
