--- a/src/app/site/site-dashboard/site-dashboard.component.html
+++ b/src/app/site/site-dashboard/site-dashboard.component.html
@@ -43,9 +43,9 @@
                     <th mat-header-cell *matHeaderCellDef>Patient ID</th>
                     <td mat-cell *matCellDef="let patient" class="text-left">
                       <!-- <mat-icon>person</mat-icon> -->
-                      <span routerLink="/site/visits/{{ patient._id }}">
+                      <a routerLink="/site/visits/{{ patient._id }}">
                           {{ getRefNumber(patient.pat_id, patient.prefix) }}
-                      </span>
+                      </a>
 
                     </td>
                   </ng-container>
